fix: Optimization library to support java11.